--- a/SteamLogger/SteamLogger.csproj
+++ b/SteamLogger/SteamLogger.csproj
@@ -6,6 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
     <Authors>Sweettie</Authors>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
